Add third image-detail section to signin and signup pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <!-- Navigation -->
     <div class="container-fluid">
         <nav class="navbar navbar-light navbar-expand-md py-0 bg-light fixed-top main-navbar" id="mainNav">
-            <a href="{% url 'index' %}" class="navbar-brand"><i class="fas fa-record-vinyl accent1" id="brand-icon" aria-hidden="true"></i>pera Ireland</a>
+            <a href="{% url 'index' %}" class="navbar-brand"><i class="fas fa-record-vinyl accent1" id="brand-icon" aria-label="Opera Ireland"></i>pera Ireland</a>
             <!-- Nav Toggler -->
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks"
                 aria-label="Toggle Navigation Menu">
