--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,12 @@
 <section class="container">
     <div class="row">
         {% paginate 10 posts %}
-        {% for post in posts reversed %}
+        {% for post in posts %}
             {% include 'post-template.html' %}
         {% endfor %}
-        <div class="d-flex justify-content-between">
+        <div class="col-12 my-2 d-flex justify-content-between">
             {% show_pageitems %}<span id="pagination-nav">{% show_pages %}</span>
-        </div>
+            </div>
     </div>
 </section>
 {% endblock content %}
