--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,7 @@
     <div class="row align-items-center mb-2">
         <div class="col-xs-10 offset-xs-1 col- col-md-3">
             <img src="{{ user_profile.avatar.url }}" class="profile-avatar avatar mx-2"
-                aria-labelledby="user-full-name">
+                aria-labelledby="user-full-name" alt="">
         </div>
         <div class="col-xs-10 offset-xs-1 col-md-9 mt-3">
             <div class="row">
