--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
         <div class="col-xs-10 offset-xs-1 col-md-9 mt-3">
             <div class="row">
                 <div class="col-12 px-2 px-md-0">
-                    <a href="{{user_profile.user.username}}">
+                    <a href="{{user_profile.user.username}}" aria-label="Link to profile">
                         <h2 id="profile-name-display" class="d-inline">
                         {% if user_profile.first_name and user_profile.last_name %}
                             {{ user_profile.first_name }} {{ user_profile.last_name }}</h2><h3 class="d-inline"> (@{{ user_profile.user.username }})</h3>
@@ -88,7 +88,7 @@
                         <p class="history-item-year">{{ item.year }}</p>
                         <h4>{{ item.history_heading }}
                             {% if request.user.username == user_profile.user.username %}
-                            <a href="{% url 'delete-item' id=item.id %}"><i class="fas fa-trash-alt"></i></a>
+                            <a href="{% url 'delete-item' id=item.id %}" aria-label="Click to delete {{ item.history_heading }}"><i class="fas fa-trash-alt"></i></a>
                             {% endif %}
                         </h4>
                         {% if item.history_details is not None %}
