--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/5d01ef762e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://res.cloudinary.com/cloud9wastaken/raw/upload/v1661301096/static/css/style_tnzch9.css">
+    <link rel="stylesheet" href="https://res.cloudinary.com/cloud9wastaken/raw/upload/v1661363563/static/css/style_1_rxffaf.css">
     <link rel="shortcut icon" type="image/x-icon"
         href="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089294/media/favicon_aiafts.ico">
-    <title>Opera Ireland</title>
+    <title>Opera Ireland {{ page_title }}</title>
 </head>
 
 <body>
