--- a/templates/post-template.html
+++ b/templates/post-template.html
@@ -5,11 +5,11 @@
         <div class="card-header row align-items-center mx-0 px-1">
             <div class="col-4 col-md-3 col-lg-2">
                 <img src="{{ post.user.profile.avatar.url }}" class="post-avatar avatar img-fluid"
-                    aria-labelledby="post-user-full-name">
+                    aria-labelledby="post-user-full-name" alt="">
             </div>
             <div class="col-8 col-md-9 col-lg-10">
                 <div class="row d-flex justify-content-between">
-                    <h5>{{ post.user.profile.first_name }} {{ post.user.profile.last_name }}</h5>
+                    <h5 id="post-user-full-name">{{ post.user.profile.first_name }} {{ post.user.profile.last_name }}</h5>
                     <h5 class="text-right mr-4"> @{{ post.user }}</h5>
                 </div>
             </div>
@@ -34,7 +34,7 @@
             {% if post.user == request.user %}
             <!-- Future options may include share post, edit post, disable comments, bookmark/save; however, current options are of use to post-owner only. -->
             <div class="col-1 col-s-2 col-md-4 text-right dropdown"><i class="fas fa-chevron-down"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button"></i>
                 <div class="dropdown-menu dropdown-menu-right">
                     <button class="dropdown-item" type="button"><a
                             href="{% url 'delete-post' id=post.id %}">Delete Post</a></button>
