--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<section class="container">
+<div class="container">
     <div class="row">
         {% paginate 10 posts %}
         {% for post in posts %}
@@ -14,5 +14,5 @@
             {% show_pageitems %}<span id="pagination-nav">{% show_pages %}</span>
             </div>
     </div>
-</section>
+</div>
 {% endblock content %}
