Change order of history_items on profile (most recent year first)

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -97,7 +97,7 @@
                 <!-- save/cancel button area -->
                 <div class="row justify-content-center align-items-center">
                     <button class="btn btn-primary my-3 mx-2" type="submit">{% trans "Save Details" %}</button>
-                    <button class="btn btn-light my-3 mx-2"><a href="{% url 'index' %}">{% trans "Cancel" %}</a></button>
+                    <button class="btn btn-light my-3 mx-2"><a href="{% url 'settings' %}">{% trans "Cancel" %}</a></button>
                 </div>
             </form>
         </div>
@@ -123,7 +123,7 @@
                                 <div class="col-12 text-center">{{ SocialLinkForm }}</div>
                                 <small class="col-10 col-md-12 py-2 text-center">Be sure to add the full url, eg. https://twitter.com/IrishNatOpera</small>
                                 <div class="col-12 text-center"><button class="btn btn-primary mx-2" type="submit">{% trans "Save" %}</button>
-                                <button class="btn btn-light mx-2"><a href="{% url 'index' %}">{% trans "Cancel" %}</a></button></div>
+                                <button class="btn btn-light mx-2"><a href="{% url 'settings' %}">{% trans "Cancel" %}</a></button></div>
                                 
                                 
                             </div>
