Edit button text in profile.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -97,7 +97,7 @@
                     {% if request.user.username == user_profile.user.username %}
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-primary my-2" data-toggle="modal"
-                        data-target="#addHistoryModal">Add/Edit Item(s)</button>
+                        data-target="#addHistoryModal">Add History Item</button>
                     {% endif %}
 
                 </div>
