Add test cases as md file

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -155,19 +155,19 @@
                         <div class="col-12 mb-2">
                             <label for="history-heading">Heading <i class="fas fa-info-circle" data-toggle="tooltip"
                                     data-placement="right" title="e.g. school name or theatre company"></i></label>
-                            <input type="text" maxlength="150" placeholder="" name="history_heading"
+                            <input type="text" maxlength="150" placeholder="Required" name="history_heading"
                                 id="history-heading" class="form-control" required>
                         </div>
                         <div class="col-12 mb-2">
                             <label for="history-details">Details <i class="fas fa-info-circle" data-toggle="tooltip"
-                                    data-placement="right" title="e.g. production title"></i></label>
+                                    data-placement="right" title="e.g. production title (optional)"></i></label>
                             <input type="text" maxlength="150" placeholder="" name="history_details"
                                 id="history-details" class="form-control">
                         </div>
                         <div class="col-12 mb-2">
                             <label for="history-role">Role <i class="fas fa-info-circle" data-toggle="tooltip"
                                     data-placement="right" title="Role or occupation"></i></label>
-                            <input type="text" maxlength="150" placeholder="" name="history_role" id="history-role" class="form-control" required>
+                            <input type="text" maxlength="150" placeholder="Required" name="history_role" id="history-role" class="form-control" required>
                         </div>
                         <div class="col-12 mb-2">
                             <label for="year">Year:</label>
