Edits for access. and add related info to ReadMe

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -166,7 +166,7 @@
                         </div>
                         <div class="col-12 mb-2">
                             <label for="history-role">Role <i class="fas fa-info-circle" data-toggle="tooltip"
-                                    data-placement="right" title="Role or occupation"></i></label>
+                                    data-placement="right" title="e.g. Role or occupation"></i></label>
                             <input type="text" maxlength="150" placeholder="Required" name="history_role" id="history-role" class="form-control" required>
                         </div>
                         <div class="col-12 mb-2">
