--- a/templates/post-template.html
+++ b/templates/post-template.html
@@ -1,7 +1,7 @@
 <!-- Post Template: -->
 <div class="card mt-4 mb-2 shadow rounded container px-0">
     <!-- ROW 1 -->
-    <a href="/profile/{{post.user}}" aria-label="Open user's profile">
+    <a href="/profile/{{post.user}}" aria-label="Open profile of {{post.user}}">
         <div class="card-header row align-items-center mx-0 px-1">
             <div class="col-4 col-md-3 col-lg-2">
                 <img src="{{ post.user.profile.avatar.url }}" class="post-avatar avatar img-fluid"
@@ -28,16 +28,17 @@
         <div class="row justify-content-between align-items-center">
             <!-- "Applause" aka Likes -->
             <div class="col-12 col-s-10 col-md-8">
-                <p class="lead"><a href="/post-applause?post_id={{ post.id }}"><i class="fas fa-sign-language accent1" id="applause-icon" aria-label="Click to give or remove applause"></i></a> {{ post.no_of_applause }} applause</p>
+                <p class="lead"><a href="/post-applause?post_id={{ post.id }}"><i class="fas fa-sign-language accent1" id="applause-icon" title="Click to give or remove applause"></i></a> {{ post.no_of_applause }} applause</p>
             </div>
             <!-- Dropdown chevron for user options -->
             {% if post.user == request.user %}
             <!-- Future options may include share post, edit post, disable comments, bookmark/save; however, current options are of use to post-owner only. -->
-            <div class="col-1 col-s-2 col-md-4 text-right dropdown"><i class="fas fa-chevron-down"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button"></i>
-                <div class="dropdown-menu dropdown-menu-right">
-                    <button class="dropdown-item" type="button"><a
-                            href="{% url 'delete-post' id=post.id %}">Delete Post</a></button>
+            <div class="col-1 col-s-2 col-md-4 text-right dropdown">
+                <i class="fas fa-chevron-down" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button" tabindex="0" title="Click to open post options" id="something"></i>
+                <div class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="something">
+                    <button class="dropdown-item" type="button" id="delete-post-button" role="menu-item">
+                        <a href="{% url 'delete-post' id=post.id %}">Delete Post</a>
+                    </button>
                 </div>
             </div>
             {% endif %}
