Add <main> for semantics

--- a/templates/500.html
+++ b/templates/500.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
-<h1 class="text-center py-2">Error 500</h1>
-<h2 class="text-center py-2">Pardon our error, would you like to return <a href="{% url 'index' %}">Home</a>?</h2>
+<main>
+    <h1 class="text-center py-2">Error 500</h1>
+    <h2 class="text-center py-2">Pardon our error, would you like to return <a href="{% url 'index' %}">Home</a>?</h2>
+</main>
 {% endblock %}
