--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,17 @@
 {% load paginate %}
 
 {% block content %}
-
-<div class="container">
-    <div class="row">
-        {% paginate 10 posts %}
-        {% for post in posts %}
-            {% include 'post-template.html' %}
-        {% endfor %}
-        <div class="col-12 my-2 d-flex justify-content-between">
-            {% show_pageitems %}<span id="pagination-nav">{% show_pages %}</span>
-            </div>
+<main>
+    <div class="container">
+        <div class="row">
+            {% paginate 10 posts %}
+            {% for post in posts %}
+                {% include 'post-template.html' %}
+            {% endfor %}
+            <div class="col-12 my-2 d-flex justify-content-between">
+                {% show_pageitems %}<span id="pagination-nav">{% show_pages %}</span>
+                </div>
+        </div>
     </div>
-</div>
+</main>
 {% endblock content %}
