Add search screenshots to readme

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                 {% csrf_token %}
                 <div class="input-group mb-1 mt-1">
                     <input type="text" class="form-control" name="query" placeholder="Search for users" aria-label="Search users by username" required>
-                    <button class="btn btn-outline-secondary" type="submit" id="search-button"><i class="fas fa-search"></i>
+                    <button class="btn btn-outline-secondary" type="submit" id="search-button"><i class="fas fa-search" title="Click to search"></i>
                     </button>
                 </div>
             </form>
